deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: back-end
          image: 628640267234.dkr.ecr.ap-southeast-1.amazonaws.com/eks-webapp:1.0.0.RELEASE
          ports:
            - containerPort: 3000
