service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
  app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
      port: 8080
      targetPort: 3000
      protocol: TCP
      name: webapp
