networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP1
  namespace: NS1
spec:
  podSelector: {}
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: NS2
    ports:
    - protocol: TCP
      port: 8080
